# zhiwo

./: .gitignore  README.md  pom.xml
</tool_path>sql/: shanzhu_todo_table.sql
docker/: README.md  compose.yaml
docs/: shanzhu-love-development-guideline.md  shanzhu_love.sql  目标任务模块正式版.md  目标模块开发计划.md
docs/v.10/: v1.0版本.md  习惯模块编写.md  收集箱与今日工作台：阶段规划.md  未完成的总体设计.md
shanzhu-admin/: pom.xml
shanzhu-base/: pom.xml
shanzhu-base/shanzhu-attachment/: pom.xml
shanzhu-base/shanzhu-cache/: pom.xml
shanzhu-base/shanzhu-captcha/: pom.xml
shanzhu-base/shanzhu-common/: pom.xml
shanzhu-base/shanzhu-dict/: pom.xml
shanzhu-base/shanzhu-doc/: pom.xml
shanzhu-base/shanzhu-excel/: pom.xml
shanzhu-base/shanzhu-ip/: pom.xml
shanzhu-base/shanzhu-job/: pom.xml
shanzhu-base/shanzhu-log/: pom.xml
shanzhu-base/shanzhu-mybatis/: pom.xml
shanzhu-base/shanzhu-security/: pom.xml
shanzhu-base/shanzhu-sensitive/: pom.xml
shanzhu-base/shanzhu-web/: pom.xml
shanzhu-base/shanzhu-websocket/: pom.xml
shanzhu-biz/: pom.xml
shanzhu-biz/shanzhu-monitor/: pom.xml
shanzhu-biz/shanzhu-system/: pom.xml
shanzhu-vue/: README.md
shanzhu-vue/src/router/: index.ts
sql/: lihua.sql  shanzhu_love.sql  shanzhu_todo_table.sql
zhiwo-desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
zhiwo-desktop/src/: App.vue  main.ts
zhiwo-desktop/src-tauri/: Cargo.toml  tauri.conf.json
zhiwo-desktop/src-tauri/capabilities/: default.json
zhiwo-desktop/src-tauri/icons/: icon.icns
zhiwo-desktop/src-tauri/src/: lib.rs  main.rs
(+447 files in other folders)
